# ReLinkedVR

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  OculusAmeliorated.sln  README.md  ReLinkedVR.sln
Assets/: config.json
LibsOld/minhook/: libMinHook.x64.lib
OVRServiceHook/: OVRServiceHook.vcxproj  OVRServiceHook.vcxproj.filters  dllmain.cpp  offsets.h  proxy.h  proxy.hpp  util.h  util.hpp  version.asm  version.def
OVRServiceMock/: OVRServiceMock.vcxproj  OVRServiceMock.vcxproj.filters  main.cpp
OculusAppFramework/: OculusAppFramework.vcxproj  OculusAppFramework.vcxproj.filters  dllmain.cpp
projects/: CMakeLists.txt
projects/appfw/: CMakeLists.txt
projects/appfw/include/: airlink_helper.hpp  ipc_server.hpp  steamvr_helper.hpp  util.hpp
projects/appfw/src/: main.cpp
projects/ovrcore/: CMakeLists.txt
projects/ovrcore/include/: ovr.hpp  ovr_directdisplay.hpp  ovr_interface.hpp  ovr_math.hpp  ovr_oaf.hpp  ovr_service.hpp
projects/svchook/: CMakeLists.txt
projects/svchook/proxylib/: version.asm  version.def
projects/svchook/proxylib/include/: proxylib.hpp
projects/svchook/src/: main.cpp
setup/: config.json
win32/appfw/: appfw.vcxproj  appfw.vcxproj.filters  dllmain.cpp  oaf_callbacks.cpp  oaf_callbacks.h  openvr_helper.cpp  openvr_helper.h  rlvr_headset.h  util.h
win32/appfwemu/: appfwemu.cpp  appfwemu.vcxproj  appfwemu.vcxproj.filters  func_table.h
win32/minhook/: libMinHook.x64.lib
win32/rlvrcore/: rlvr_oaf.cpp  rlvr_oaf.h  rlvr_ovrinterfaces.h  rlvr_ovrtypes.h  rlvr_util.cpp  rlvr_util.h  rlvrcore.vcxproj  rlvrcore.vcxproj.filters
win32/svchook/: dllmain.cpp  svchook.vcxproj  svchook.vcxproj.filters  version.asm  version.def
